--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Exo" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+     crossorigin=""/>
+     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+    crossorigin=""></script>
 </head>
 <body>
     <header>
@@ -23,7 +29,7 @@
     <main>
         <div class="container">
             <h2><strong>Please input an IP address:</strong></h2>
-            <form action="#">
+            <form onsubmit="return false;">
                 <div class="ip-address-input">
                     <input type="number" id="octet1" name="octet1" min="0" max="255" placeholder="xxx" required>
                     <span class="dot">.</span>
@@ -33,8 +39,11 @@
                     <span class="dot">.</span>
                     <input type="number" id="octet4" name="octet4" min="0" max="255" placeholder="xxx" required>
                 </div>
-                <button type="submit" class="submit-btn">Submit</button>
+                <button type="submit" class="submit-btn" onclick="mapData()">Submit</button>
             </form>
+        </div>
+        <div id="map" style="height: 600px;">
+
         </div>
     </main>    
 
